// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
       Expenses  
    </div>
    <div
      className="show-for-desktop"
    >
       Expense  
    </div>
    <div
      className="show-for-desktop"
    >
       Amount  
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item__message"
    >
      No expenses 
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
       Expenses  
    </div>
    <div
      className="show-for-desktop"
    >
       Expense  
    </div>
    <div
      className="show-for-desktop"
    >
       Amount  
    </div>
  </div>
  <div
    className="list-body"
  >
    <Connect(ExpenseListItem)
      amount={10}
      createdAt={0}
      description="d1"
      id="1"
      key="0"
      note="n1"
    />
    <Connect(ExpenseListItem)
      amount={105}
      createdAt={-345600000}
      description="cd1"
      id="2"
      key="1"
      note="n1"
    />
    <Connect(ExpenseListItem)
      amount={50}
      createdAt={86400000}
      description="ud1"
      id="3"
      key="2"
      note="n1"
    />
  </div>
</div>
`;
